@@ -1,2 +1,21 @@
 # hippo4j-demo
-this project aims to make Hippo4J compatible with Spring Boot 3. x
+This project aims to make Hippo4J compatible with Spring Boot 3. x
+
+
+
+### Precondition
+
++ JDK 17
++ Spring Boot 3.x
+
+
+
+### Run
+
++ Adding VM Options parameters for the SpringBoot application startup class
+
+  ~~~shell
+  --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+  ~~~
+
+  
